--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -37,4 +37,16 @@
   .form-input {
     @apply shadow appearance-none block w-full bg-gray-100 text-gray-900 border border-gray-100 rounded py-3 px-4 mb-3 leading-tight focus:border-none focus:bg-white focus:ring-main;
   }
+
+  .user-form {
+    @apply bg-white p-4 rounded-md w-[90%] mt-[150px] lg:mt-0 lg:w-[500px] relative;
+  }
+
+  .user-form-input {
+    @apply w-full shadow-md border-transparent h-[50px] px-3 mt-3 rounded-lg focus:ring-2 focus:ring-main focus:outline-none;
+  }
+
+  .user-form-error {
+    @apply text-red-500 text-xs font-medium mt-3 ml-2;
+  }
 }
