--- a/web/src/styles.css
+++ b/web/src/styles.css
@@ -43,7 +43,7 @@
   }
 
   .user-form-input {
-    @apply w-full shadow-md border-transparent h-[50px] px-3 mt-3 rounded-lg focus:ring-2 focus:ring-main focus:outline-none;
+    @apply w-full shadow-md border-transparent h-[50px] px-3 mt-3 rounded-lg focus:ring-2 focus:ring-main focus:outline-none focus:border-none;
   }
 
   .user-form-error {
